# viska

./: Cargo.toml  rustfmt.toml
common/: Cargo.toml
lib/helpers/: Cargo.toml
lib/models/: Cargo.toml
lib/models/src/transport/: request_msg.rs  response_msg.rs  transport_msg.rs
lib/sip_server/: Cargo.toml
lib/sip_server/src/transaction/: mod.rs
lib/sip_server/src/transaction/sm/uac/: mod.rs
lib/sip_server/src/transaction/sm/uas/: mod.rs
lib/sip_server/src/tu/dialogs/uac/: dialog_sm.rs
lib/store/: Cargo.toml
lib/store/src/: dialog.rs  registration.rs  transaction.rs
lib/tasks/: Cargo.toml
src/: main.rs
tests/common/: mod.rs
tests/common/factories/common/: ip_addr_builder.rs
tests/unit_tests/sip_server/transaction/: uac_tests.rs  uas_tests.rs
