[package]
name = "common"
version = "0.1.0"
authors = [
    "Filippos Vasilakis <vasilakisfil@gmail.com>",
    "Ming Xu <91617361+M1ngXU@users.noreply.github.com>",
]
edition = "2021"

[dependencies]
tokio-util = { version = "0.6.7", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.4"
bytes = "1.0.1"
futures-util = "0.3.4"
chrono = { version = "0.4.11" }
log = { version = "0.4.8" }
pretty_env_logger = { version = "0.5.0" }
rand = { version = "0.8.5" }
rand_chacha = { version = "0.3.1" }
uuid = { version = "1.8.0", features = ["v4"] }
ipnetwork = "0.20.0"
envconfig = "0.10.0"
envconfig_derive = "0.10.0"
delegate = "0.12.0"
md5 = "0.7.0"
async-trait = "0.1.40"
pnet = "0.34.0"
once_cell = "1.5.2"
lexical-core = "0.8.5"
rsip = "0.4.0"
#rsip-dns = { version = "0.1.4", features = ["trust-dns"] }
