[package]
name = "sip_server"
version = "0.1.0"
authors = [
    "Filippos Vasilakis <vasilakisfil@gmail.com>",
    "Ming Xu <91617361+M1ngXU@users.noreply.github.com>",
]
edition = "2021"

[dependencies]
common = { path = "../../common" }
models = { path = "../models" }
store = { path = "../store" }
helpers = { path = "../helpers" }
